{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 19,
  "lineage": "d7015493-f764-a479-b1fb-e16e173ca9db",
  "resources": [
    {
      "module": "module.panorama[\"pn-1\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Palo-panorama01-management",
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkInterfaces/Palo-panorama01-management-nic",
            "internal_domain_name_suffix": "i3wfl3dzwpwenf0dfdokmswzcd.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "primary",
                "primary": true,
                "private_ip_address": "10.1.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/publicIPAddresses/Palo-panorama01-management-pip",
                "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-9A-1F-0F",
            "name": "Palo-panorama01-management-nic",
            "private_ip_address": "10.1.1.10",
            "private_ip_addresses": [
              "10.1.1.10"
            ],
            "resource_group_name": "Palo-RG-PN-FW",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            },
            "virtual_machine_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Compute/virtualMachines/Palo-panorama01"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.panorama.azurerm_public_ip.this",
            "module.panorama.data.azurerm_public_ip.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.panorama[\"pn-1\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Palo-panorama01-management",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/publicIPAddresses/Palo-panorama01-management-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.85.93.16",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "Palo-panorama01-management-pip",
            "resource_group_name": "Palo-RG-PN-FW",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_network_security_rule.this",
            "module.vnet.azurerm_route.this",
            "module.vnet.azurerm_route_table.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_subnet_network_security_group_association.this",
            "module.vnet.azurerm_subnet_route_table_association.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "panorama",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "location": "northeurope",
            "name": "Palo-panorama-nsg",
            "resource_group_name": "Palo-RG-PN-FW",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.1.0.0/16",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22",
                  "443"
                ],
                "direction": "Inbound",
                "name": "vmseries_mgmt_allow_inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "1.2.3.4"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "panorama-vmseries_mgmt_allow_inbound",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.1.0.0/16",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "",
            "destination_port_ranges": [
              "22",
              "443"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg/securityRules/vmseries_mgmt_allow_inbound",
            "name": "vmseries_mgmt_allow_inbound",
            "network_security_group_name": "Palo-panorama-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Palo-RG-PN-FW",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "1.2.3.4"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet",
            "name": "mgmt-snet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Palo-RG-PN-FW",
            "virtual_network_name": "Palo-panorama-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "trust",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/trust-snet",
            "name": "trust-snet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Palo-RG-PN-FW",
            "virtual_network_name": "Palo-panorama-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "untrust",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/untrust-snet",
            "name": "untrust-snet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Palo-RG-PN-FW",
            "virtual_network_name": "Palo-panorama-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet\"]",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet",
            "network_security_group_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "trust",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/trust-snet",
            "network_security_group_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/trust-snet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        },
        {
          "index_key": "untrust",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/untrust-snet",
            "network_security_group_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg",
            "subnet_id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/untrust-snet"
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this",
            "module.vnet.azurerm_network_security_group.this",
            "module.vnet.azurerm_subnet.this",
            "module.vnet.azurerm_virtual_network.this",
            "module.vnet.data.azurerm_subnet.this",
            "module.vnet.data.azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "module": "module.vnet[\"vnet\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f4556c47-b379-46ec-9743-28dca64ad913",
            "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet",
            "location": "northeurope",
            "name": "Palo-panorama-vnet",
            "resource_group_name": "Palo-RG-PN-FW",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/mgmt-snet",
                "name": "mgmt-snet",
                "security_group": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/untrust-snet",
                "name": "untrust-snet",
                "security_group": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg"
              },
              {
                "address_prefix": "10.1.3.0/24",
                "id": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/virtualNetworks/Palo-panorama-vnet/subnets/trust-snet",
                "name": "trust-snet",
                "security_group": "/subscriptions/d47f1af8-9795-4e86-bbce-da72cfd0f8ec/resourceGroups/Palo-RG-PN-FW/providers/Microsoft.Network/networkSecurityGroups/Palo-panorama-nsg"
              }
            ],
            "tags": {
              "CreatedBy": "Palo Alto Networks",
              "CreatedWith": "Terraform"
            }
          },
          "dependencies": [
            "azurerm_resource_group.this",
            "data.azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}